Implemented forgot password button

--- a/App/src/main/res/layout/forgotpassword.xml
+++ b/App/src/main/res/layout/forgotpassword.xml
@@ -60,73 +60,38 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/stockTitle" />
 
-    <EditText
-        android:id="@+id/editPasswordText"
-        android:layout_width="wrap_content"
-        android:layout_height="48dp"
-        android:layout_marginTop="96dp"
-        android:height="48dp"
-        android:autofillHints=""
-        android:background="@drawable/edittextborder"
-        android:ems="10"
-        android:fontFamily="@font/caprasimo"
-        android:hint="@string/prompt_password"
-        android:inputType="textPassword"
-        android:padding="5dp"
-        android:textColorHint="#CCB3A4"
-        android:tooltipText="Lol"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/stockTitle" />
-
     <Button
-        android:fontFamily="@font/caprasimo"
-        android:id="@+id/registerButton"
+        android:id="@+id/backButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="26dp"
         android:backgroundTint="#723A15"
-        android:text="@string/registerButton"
+        android:fontFamily="@font/caprasimo"
+        android:text="@string/back"
         android:textColorLink="#CE2020"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/loginButton"
+        app:layout_constraintEnd_toStartOf="@+id/submitButton"
         app:layout_constraintHorizontal_bias="0.864"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editPasswordText"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:fontFamily="@font/caprasimo"
-        android:id="@+id/loginButton"
+        android:id="@+id/submitButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="26dp"
         android:layout_marginEnd="84dp"
         android:backgroundTint="#723A15"
-        android:text="@string/loginButton"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editPasswordText"
-        app:layout_constraintVertical_bias="0.0" />
-
-    <Button
         android:fontFamily="@font/caprasimo"
-        android:id="@+id/forgotPasswordButton"
+        android:text="@string/submit"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <TextView
+        android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="48dp"
-        android:layout_marginBottom="88dp"
-        android:textColorLink="#CE2020"
-        android:backgroundTint="#723A15"
-        android:text="@string/forgotPassword"
-        android:textColor="#000000"
-        android:textColorHighlight="#000000"
+        android:text=""
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.642"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editPasswordText"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintTop_toBottomOf="@+id/editUsernameText" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
